made copy edits

--- a/src/javascript/templates/patient1/patient1View11.hbs
+++ b/src/javascript/templates/patient1/patient1View11.hbs
@@ -53,14 +53,14 @@
                 <main id="content-main" class="row patient-1">
 
                   <p>
-                    Breast-conserving surgery: Only the part of the breast that contains cancerous tissue is removed.<br><br>
-Mastectomy: The entire breast is removed.<br><br>
+                    <b>Breast-conserving surgery:</b> Only the part of the breast that contains cancerous tissue is removed.<br><br>
+                    <b>Mastectomy:</b> The entire breast is removed.<br><br>
 
-Lymph node evaluation will be done with either surgery.<br><br>
+                    Lymph node evaluation will be done with either surgery.<br><br>
+                    
+                    Surgery that conserves the breast is always the best approach unless there are factors indicating that mastectomy is required.<br><br>
 
-Surgery that conserves the breast is always the best approach unless there are factors indicating that mastectomy is required.<br><br>
-
-<strong>Velma had a right breast lumpectomy and a sentinal lymph node biopsy.</strong>
+                    <strong>Velma had a right breast lumpectomy and a sentinal lymph node biopsy.</strong>
 
                   </p>
 
