--- a/src/javascript/templates/patient1/patient1View12.hbs
+++ b/src/javascript/templates/patient1/patient1View12.hbs
@@ -54,7 +54,7 @@
                                     <main id="content-main" class="row patient-1 ">
 
                       <p>
-                        A pathology report contains detailed information about the patient’s diagnosis. Velma’s physicians will use the information in the report to help them make decisions about the type of treatment that she might receive.
+                        A <b>pathology report</b> contains detailed information about the patient’s diagnosis. Velma’s physicians will use the information in the report to help them make decisions about the type of treatment that she might receive.
 
                       </p>
 
