--- a/src/javascript/templates/patient1/patient1View17.hbs
+++ b/src/javascript/templates/patient1/patient1View17.hbs
@@ -50,7 +50,7 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-    The <span class="pink-hl">Estrogen Receptor (ER) Test</span> determines if the cells from the breast tissue have protein receptors for estrogen.     </blockquote>
+      Velma’s doctors have sent her tissue sample for ER testing.</blockquote>
     <main id="content-main" class="row patient-1 svg-test">
 
       <h2>Conducting the ER test:</h2>
@@ -58,7 +58,7 @@
           <img src="images/test_sample_and_gloved_hand2.jpg" alt="" />
             <div class="svg-text full">
                 <p>
-                    <strong>Step 1</strong>
+                    <strong>Step 1:</strong>
   Tissue sections are cut, placed on a glass slide, and antibodies that bind to the ER protein are applied to the tissue.
 
 
