--- a/src/javascript/templates/patient1/patient1View18.hbs
+++ b/src/javascript/templates/patient1/patient1View18.hbs
@@ -63,7 +63,7 @@
           <img class="magnify" class="zoom" data-magnify-src="images/test_sample_and_gloved_hand2.jpg" src="images/test_sample_and_gloved_hand2.jpg" alt="cell biopsy slide 3" />
           <div class="svg-text full">
               <p>
-                  <strong>Step 2</strong>
+                  <strong>Step 2:</strong>
 A second antibody binds to the first and color develops where this antibody binds.
 
 
