--- a/src/javascript/templates/patient1/patient1View19.hbs
+++ b/src/javascript/templates/patient1/patient1View19.hbs
@@ -62,20 +62,14 @@
 
         <ul class="specs no-margin">
             <li>
-                The sample is viewed under a microscope. <br><strong> Brown color indicates a positive test.  No brown color indicates a negative test.</strong></li>
-            <li>
-              Click the microscope to conduct the ER Test.<br>
-              <strong>Student views sample and determines whether or not brown coloring is present.</strong></li>
-            <li>
-              Are Velma’s ER test results positive or negative?<br>
-              </li>
-
+                The sample is viewed under a microscope. <br><strong> Brown color indicates a positive test.  No brown color indicates a negative test.</strong>
+            </li>
         </ul>
         <div class="svg-container">
             <img src="images/ER_Invasive3.jpg" alt="cell biopsy slide 3" />
             <div class="svg-text full">
                 <p>
-                  <strong>Step 3</strong>
+                  <strong>Step 3:</strong> The sample is viewed under a microscope. Brown color indicates a positive test. No brown color indicates a negative test.
                 </p>
                   <a class="y-n continue next left-arrow" ><span type="button"  name="button" data-toggle="modal" data-target="#myModal" class="top-1">&#8594;</span></a>
 
