--- a/src/javascript/templates/patient1/patient1View20.hbs
+++ b/src/javascript/templates/patient1/patient1View20.hbs
@@ -53,7 +53,7 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-    The HER2 FISH Test is another test performed on all breast cancer. FISH stands for Fluorescence in Situ Hybridization.
+    The <span class="pink-hl">HER2 FISH Test</span> is another test performed on all breast cancer. FISH stands for Fluorescence in Situ Hybridization.
     </blockquote>
   <main id="content-main" class="row patient-1">
 
