--- a/src/javascript/templates/patient1/patient1View23.hbs
+++ b/src/javascript/templates/patient1/patient1View23.hbs
@@ -71,8 +71,7 @@
               <img src="images/microscope3.jpg" alt="cell biopsy slide 3" />
               <div class="svg-text full">
                   <p>
-                    <strong>Step 2</strong>
-The sample is washed in a buffer agent.</p>
+                    <strong>Step 2:</strong> The sample is washed in a buffer agent.</p>
                     <a class="y-n left-arrow continue next" data-navigate="patient1view24"><span class="top-1">&#8594;</span></a>
 
               </div>
