--- a/src/javascript/templates/patient1/patient1View24.hbs
+++ b/src/javascript/templates/patient1/patient1View24.hbs
@@ -72,8 +72,7 @@
             <img src="images/test_samples.jpg" alt="cell biopsy slide 3" />
             <div class="svg-text full">
                 <p>
-                  <strong>Step 3</strong>
-              Step 3:  The slides are dehydrated in ethanol and air-dried.
+                  <strong>Step 3:</strong> The slides are dehydrated in ethanol and air-dried.
 </p>
                 <a class="y-n continue next left-arrow" href="/patient1view25" data-navigate="patient1view25">  <span class="top-4">&#8594;</span></a>
 
