--- a/src/javascript/templates/patient1/patient1View27.hbs
+++ b/src/javascript/templates/patient1/patient1View27.hbs
@@ -54,10 +54,9 @@
   Observe the fluorescence micrograph for HER2 FISH testing.        </blockquote>
         <main id="content-main" class="row patient-1 svg-test">
 
-        <h2>Conducting the HER2 FISH Test:</h2>
-        <p>
-        Look at each cell nucleus (depicted in blue).
-Count the number of red dots (HER2) and the number of green dots (CEP17).
+        <p class="pad50">
+        Look at each cell nucleus (depicted in blue).<br><br>
+Count the number of red dots (HER2) and the number of green dots (CEP17).<br><br>
 If the red areas are at least or greater than 2 times the number of green areas, the test result for HER2 FISH is amplified.
 In this example. the ratio of red dots to green dots is 6:2, or 3.  This means that HER2 is amplified.
 
