--- a/src/javascript/templates/patient1/patient1View29.hbs
+++ b/src/javascript/templates/patient1/patient1View29.hbs
@@ -51,7 +51,7 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-The OncoType DX® Test helps determine if a patient will benefit from chemotherapy as well as hormone blocking therapy.
+The <span class="pink-hl">OncoType DX® Test</span> helps determine if a patient will benefit from chemotherapy as well as hormone blocking therapy.
        </blockquote>
         <main id="content-main" class="row patient-1">
 <p>
