--- a/src/javascript/templates/patient1/patient1View30.hbs
+++ b/src/javascript/templates/patient1/patient1View30.hbs
@@ -59,9 +59,9 @@ Based on the expression of 21 selected genes, a recurrence score is generated an
 The higher the Recurrence Score, the greater the chance that the breast cancer will come back and the
  more likely a patient will benefit from chemotherapy. <br><br>
      <strong>What the Score Means</strong>
-<strong>Lower than 18:</strong>  Low risk of recurrence with hormone therapy.  Risk of side effects from chemotherapy outweigh potential benefits to patient.<br>
-<strong>Between 18 and 30:</strong>  Intermediate risk of recurrence with hormone therapy.  Unknown whether benefits of chemotherapy outweigh risk of side effects.<br>
-<strong>Greater than 30:</strong>  High risk of recurrence with hormone therapy alone.  Benefits of chemotherapy outweigh risk of side effects.
+<strong>Lower than 18:</strong><br>  Low risk of recurrence with hormone therapy.  Risk of side effects from chemotherapy outweigh potential benefits to patient.<br>
+<strong>Between 18 and 30:</strong><br>  Intermediate risk of recurrence with hormone therapy.  Unknown whether benefits of chemotherapy outweigh risk of side effects.<br>
+<strong>Greater than 30:</strong><br>  High risk of recurrence with hormone therapy alone.  Benefits of chemotherapy outweigh risk of side effects.
 
 </p>
 
