--- a/src/javascript/templates/patient1/patient1View31.hbs
+++ b/src/javascript/templates/patient1/patient1View31.hbs
@@ -60,7 +60,7 @@
                 <img src="images/test_tubes.jpg" alt="cell biopsy slide 3" />
                 <div class="svg-text full">
                     <p>
-                      <strong>Step 1</strong>
+                      <strong>Step 1.</strong>
    The pathologist sends a piece of the cancer tissue for analysis.
 
 
