--- a/src/javascript/templates/patient1/patient1View32.hbs
+++ b/src/javascript/templates/patient1/patient1View32.hbs
@@ -61,7 +61,7 @@
                 <img src="images/onco_test.jpg" alt="cell biopsy slide 3" />
                 <div class="svg-text full">
                     <p>
-                      <strong>Step 3</strong>
+                      <strong>Step 3.</strong>
   An automated multi-gene analysis is conducted on the selected 21 genes.
   </p>
                       <a class="y-n continue next left-arrow" data-navigate="patient1view33" ><span class="top-4">&#8594;</span></a>
