--- a/src/javascript/templates/patient1/patient1View35.hbs
+++ b/src/javascript/templates/patient1/patient1View35.hbs
@@ -55,7 +55,7 @@ Putting it All Together: The HER2 FISH Test
        </blockquote>
         <main id="content-main" class="row patient-1">
                     <p>
-If the HER2 FISH results return as amplified, the physician will likely recommend a HER2-targeted therapy.
+If the HER2 FISH results return as amplified, the physician will likely recommend a HER2-targeted therapy.<br><br>
                       <strong>Velma’s HER2 FISH test score showed that her HER2 oncogene is Not Amplified.</strong>
  </p>
 
