--- a/src/javascript/templates/startView2.hbs
+++ b/src/javascript/templates/startView2.hbs
@@ -4,7 +4,7 @@
 </div>
 <div class="col-md-4 col-md-offset-4">
     <blockquote class="start-quote">
-        Lets choose the next patient below and learn more about her.
+        Let's choose the next patient below and learn more about her.
     </blockquote>
 </div>
 <div class="pick-patient col-md-8 col-md-offset-2">
