--- a/src/javascript/templates/patient1/patient1View13-5.hbs
+++ b/src/javascript/templates/patient1/patient1View13-5.hbs
@@ -51,7 +51,7 @@
                 </div>
                 <div class="col-md-6 col-md-offset-1 top-quote">
                   <blockquote>
-                      Let's review
+                      Let's review.
                   </blockquote>
                     <main id="content-main" class="row patient-1 svg-test">
 
