--- a/src/javascript/templates/patient1/patient1View26.hbs
+++ b/src/javascript/templates/patient1/patient1View26.hbs
@@ -57,9 +57,12 @@
         <h2>Conducting the HER2 FISH Test:</h2>
             <div class="svg-container">
                 <img src="images/microscope6.jpg" alt="cell biopsy slide 3" />
+                <p>
+                  Now you’re ready to observe the fluorescence micrograph!
+                </p>
                 <div class="svg-text full">
                     <p>
-                      <strong>Step 5</strong>
+                      <strong>Step 5.</strong>
     The fluorescence is observed using a fluorescence microscope.
 
   </p>
