--- a/src/javascript/templates/patient1/patient1View33.hbs
+++ b/src/javascript/templates/patient1/patient1View33.hbs
@@ -61,7 +61,7 @@
                 <img src="images/clipboard2.jpg" alt="cell biopsy slide 3" />
                 <div class="svg-text full">
                     <p>
-                      <strong>Step 4</strong>
+                      <strong>Step 4.</strong>
    A score is calculated.
 
   </p>
