--- a/src/javascript/templates/patient2/patient2view2.hbs
+++ b/src/javascript/templates/patient2/patient2view2.hbs
@@ -45,12 +45,13 @@
     </blockquote>
     <main id="content-main" class="row patient-2 svg-test">
 
-      <p>
+      <p class="pad50">
         Review Michele’s mammogram and click on an area that shows abnormalities.
-
+        <br><br>
+        Be sure to record the information in your Lab Handbook.
       </p>
       <div class="svg-container">
-        <div class="svg-text">Which object is closest in size?</div>
+        <div class="svg-text">Click the area that shows an abnormality.</div>
       <!-- <svg preserveAspectRatio="xMinYMin meet" class="svg-content" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
          width="100%" height="100%" viewBox="0 0 432 451.2" enable-background="new 0 0 432 451.2" xml:space="preserve">
          <image width="432" height="451.2" xlink:href="images/Mammogram_Left_Abnormal_Patient2-Michele.jpg">
