changed endview by adding a link and a return home button

--- a/src/javascript/templates/endView.hbs
+++ b/src/javascript/templates/endView.hbs
@@ -17,18 +17,18 @@
 Congratulations, you have completed the Decoding Cancer Virtual Lab.    </blockquote>
     <main id="content-main" class="row patient-3">
 
-      <p>As you have experienced in this lab, precision medicine reduces over-treatment and under-treatment of cancer. Precision medicine better defines options for treatment accounting for an individual’s unique tumor characteristics and other patient factors.
-This targeted approach offers particular promise in the treatment of breast cancer because it offers a more specific therapy with greater benefit and fewer side effects.
-In keeping with the MoonShot initiative to cure cancer, a better understanding of the unique characteristics of each tumor will guide the development of more effective treatments for cancer patients.  This strategy will one day allow us to win the war against cancer.
+      <p>As you have experienced in this lab, precision medicine reduces over-treatment and under-treatment of cancer. Precision medicine better defines options for treatment accounting for an individual’s unique tumor characteristics and other patient factors.<br><br>
+This targeted approach offers particular promise in the treatment of breast cancer because it offers a more specific therapy with greater benefit and fewer side effects.<br><br>
+In keeping with the MoonShot initiative to cure cancer, a better understanding of the unique characteristics of each tumor will guide the development of more effective treatments for cancer patients.  This strategy will one day allow us to win the war against cancer.<br><br> <a style="color:#337ab7;" href="">Click here to download your certificate of completion.</a>
 
 </p>
 <figure><img src="images/patient_and_doctor3.jpg" alt="" /></figure>
 
-         <div class="row continue-container background-nav-blue">
-             <div class="col-md-12 no-pad text-center">
-
-             </div>
-         </div>
+<div class="row continue-container  ">
+    <div class="col-md-12 no-pad text-center">
+      <a data-navigate="screen2" class="continue background-nav-blue intro-fix"><button type="button" class="line-before" name="button">Return to Decoding Cancer</button></a>
+    </div>
+</div>
 
     </main>
   </div>
