--- a/src/javascript/templates/index.hbs
+++ b/src/javascript/templates/index.hbs
@@ -18,4 +18,6 @@
 <a data-navigate="patient2view11">patient2view11</a><br>
 <a data-navigate="patient3view1">patient3view1</a><br>
 <a data-navigate="patient3view15">patient3view15</a><br>
+<a data-navigate="endview">endview</a><br>
+
 </div>
