fixed endview border top

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1474,6 +1474,9 @@ button {
     color: white!important;
   }
 }
+.intro-border {
+      border-top: 10px solid #0a2332!important;
+}
 
 .text-blue {
   color: #337ab7!important;
