--- a/src/javascript/templates/endView.hbs
+++ b/src/javascript/templates/endView.hbs
@@ -15,7 +15,7 @@
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
 Congratulations, you have completed the Decoding Cancer Virtual Lab.    </blockquote>
-    <main id="content-main" class="row patient-3">
+    <main id="content-main" class="row patient-3 intro-border">
 
       <p>As you have experienced in this lab, precision medicine reduces over-treatment and under-treatment of cancer. Precision medicine better defines options for treatment accounting for an individual’s unique tumor characteristics and other patient factors.<br><br>
 This targeted approach offers particular promise in the treatment of breast cancer because it offers a more specific therapy with greater benefit and fewer side effects.<br><br>
