--- a/src/javascript/templates/patient2/patient2view2.hbs
+++ b/src/javascript/templates/patient2/patient2view2.hbs
@@ -77,7 +77,7 @@
       	.st1{fill:#FFFFFF;}
 
       </style>
-      <image style="width:100%;height:100%;position:relative;top:0;left:0;bottom:0;right:0;overflow:visible;enable-background:new" width="810" height="810" xlink:href="images/Mammogram_Right_Abnormal_Patient1-Velma.jpg" >
+      <image style="width:100%;height:100%;position:relative;top:0;left:0;bottom:0;right:0;overflow:visible;enable-background:new" width="810" height="810" xlink:href="images/breast_scan8.jpg" >
       </image>
       <ellipse class="st0" cx="606.7" cy="656.5" rx="68.1" ry="68.8"/>
       <path fill="#FFFFFF" class="circle" d="M606.7,732.1c-41.4,0-74.9-33.9-74.9-75.6s33.6-75.6,74.9-75.6s74.9,33.9,74.9,75.6l0,0
