fixed patient2view2 and view3

--- a/src/javascript/templates/patient1/patient1View8.hbs
+++ b/src/javascript/templates/patient1/patient1View8.hbs
@@ -70,7 +70,7 @@
 
                 </p>
 
-<figure>
+<figure class="m-bot-25">
                      <img class="magnify one-hun" class="zoom" data-magnify-src="images/BenignBreast_NORMAL.jpg" src="images/BenignBreast_NORMAL.jpg" alt="cell biopsy slide 3" />
 </figure>
 <h2>Cancerous</h2>
