--- a/src/javascript/templates/patient2/patient2view2.hbs
+++ b/src/javascript/templates/patient2/patient2view2.hbs
@@ -71,7 +71,7 @@
       </svg> -->
 
 
-       <svg style="cursor:pointer;" version="1.1" id="mammo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+       <!-- <svg style="cursor:pointer;" version="1.1" id="mammo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
       	 viewBox="0 0 810 810" style="enable-background:new 0 0 810 810;" xml:space="preserve">
       <style type="text/css">
       	.st0{opacity:0.35;}
@@ -88,8 +88,29 @@
       	C639.9,534.4,571,534.4,527.7,576.8z"/>
       <polygon fill="none" class="cancer" points="531.7,717 527.7,665 542.8,607 580,578 619,566 654,573 688.1,598.6 706,632 711,680 670.5,696.1
       	626.6,717.7 577,739 559,739 "/>
-      </svg>
+      </svg> -->
+
+
       <?xml version="1.0" encoding="utf-8"?>
+<!-- Generator: Adobe Illustrator 19.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 810 810" style="enable-background:new 0 0 810 810;" xml:space="preserve">
+<style type="text/css">
+	.st0{opacity:0.35;}
+	.st1{fill:#FFFFFF;}
+</style>
+<image style="width:100%;height:100%;position:relative;top:0;left:0;bottom:0;right:0;overflow:visible;enable-background:new"  width="810" height="810" xlink:href="images/Mammogram_Left_Abnormal_Patient2-Michele.jpg" >
+</image>
+<circle class="st0" cx="147.1" cy="587.8" r="44.1"/>
+<path fill="#FFFFFF" class="circle" d="M147.1,636.3c-26.8,0-48.5-21.7-48.5-48.5c0-26.8,21.7-48.5,48.5-48.5s48.5,21.7,48.5,48.5l0,0
+	C195.6,614.6,173.9,636.3,147.1,636.3z M147.1,546.5c-22.8,0-41.3,18.5-41.3,41.3s18.5,41.3,41.3,41.3s41.3-18.5,41.3-41.3l0,0
+	C188.4,565,169.9,546.5,147.1,546.5z"/>
+<path fill="#FFFFFF" class="circle2" d="M96,536.7l5.5,5.5c25.2-25.2,66-25.2,91.2,0s25.2,66,0,91.2l5.5,5.5c27.8-28.6,27.1-74.4-1.5-102.2
+	C168.6,509.5,124,509.5,96,536.7z"/>
+<polygon fill="none" class="cancer" points="168,630 189,613 192,592 183,573 165,551 138,536 129,544 114,554.8 98,564.6 98,583 122,609 139,627
+	"/>
+</svg>
+
 
 
 </svg>
