added hover effect to arrow for step interactives

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -531,6 +531,7 @@ top: 0px;
   max-width:40px;
   &:hover {
     text-decoration:none;
+    background: #f3398a;
   }
   span {
     margin-top: 112px;
