fixed side-nav by removing her2 test

--- a/src/javascript/templates/patient1/patient1View37-5.hbs
+++ b/src/javascript/templates/patient1/patient1View37-5.hbs
@@ -51,21 +51,12 @@
     </div>
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
-Recommend a treatment plan for Velma.     </blockquote>
+Check on Velma's progress.    </blockquote>
         <main id="content-main" class="row patient-1">
     <p>
-  Use the notes from your Lab Handbook to recommend a personalized treatment plan for Velma Belt.
-Select one of the following options:
- Hormone blocking therapy only
- Hormone blocking therapy and chemotherapy
- HER2-targeted therapy and chemotherapy
- Hormone blocking  therapy, HER2-targeted therapy, and chemotherapy
-You may change your recommendation before getting an update on your patient’s status.
-Once you are done with your recommendation, you can review your patient’s status.
+      Following her treatment, physicians will monitor Velma to determine whether or not her breast cancer has returned. If the cancer does not recur, the treatment approach was successful. If her breast cancer recurs, the treatment approach was not successful.
 
-Student makes a selection.  Feedback given.
-
-Be sure to record the information in your Lab Handbook.
+      <strong>As a result of hormonal therapy, Velma has not experienced a recurrence of breast cancer. Success!</strong>
 
  </p>
 <figure>  <img src="images/test_tubes_and_data_sheets.jpg" alt="cell biopsy slide 3" /></figure>
@@ -80,10 +71,25 @@ Be sure to record the information in your Lab Handbook.
 
                   </div>
                   <div class="col-md-4">
-                    <a data-navigate="patient1view37_5" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                    <a class="continue next"><button type="button" data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
 
                     <!-- Modal -->
+                    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                      <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                          <div class="modal-body">
+                          <p>
+                          Following her treatment, physicians will monitor Velma to determine whether or not her breast cancer has returned.  If the cancer does not recur, the treatment approach was successful.  If her breast cancer recurs, the treatment approach was not successful.
+<strong>As a result of hormonal therapy, Velma has not experienced a recurrence of breast cancer.  Success!</strong>
+                          </p>
+                          </div>
+                          <div class="modal-footer background-nav-blue">
+                            <a data-navigate="patient1view38" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
 
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
             </div>
