--- a/src/javascript/templates/patient1/patient1View19.hbs
+++ b/src/javascript/templates/patient1/patient1View19.hbs
@@ -60,11 +60,7 @@
     </blockquote>
     <main id="content-main" class="row patient-1 svg-test">
 
-        <ul class="specs no-margin">
-            <li>
-                The sample is viewed under a microscope. <br><strong> Brown color indicates a positive test.  No brown color indicates a negative test.</strong>
-            </li>
-        </ul>
+        <h2>Conducting the ER test:</h2>
         <div class="svg-container">
             <img src="images/ER_Invasive3.jpg" alt="cell biopsy slide 3" />
             <div class="svg-text full">
