--- a/src/javascript/templates/patient1/patient1View25.hbs
+++ b/src/javascript/templates/patient1/patient1View25.hbs
@@ -59,7 +59,7 @@
                 <img src="images/doctor_and_microscope2.jpg" alt="cell biopsy slide 3" />
                 <div class="svg-text full">
                     <p>
-                      <strong>Step 4.</strong>
+                      <strong>Step 4:</strong>
   The medium that contains the fluorescent dye is applied to the slide.
                     </p>
                     <a class="y-n continue next left-arrow" data-navigate="patient1view26"><span class="top-4">&#8594;</span></a>
