--- a/src/javascript/templates/patient1/patient1View26.hbs
+++ b/src/javascript/templates/patient1/patient1View26.hbs
@@ -62,7 +62,7 @@
                 </p>
                 <div class="svg-text full">
                     <p>
-                      <strong>Step 5.</strong>
+                      <strong>Step 5:</strong>
     The fluorescence is observed using a fluorescence microscope.
 
   </p>
