--- a/src/javascript/templates/patient1/patient1View31-2.hbs
+++ b/src/javascript/templates/patient1/patient1View31-2.hbs
@@ -60,7 +60,7 @@
                 <img src="images/test_tubes.jpg" alt="cell biopsy slide 3" />
                 <div class="svg-text full">
                     <p>
-  <strong>Step 2.</strong>
+  <strong>Step 2:</strong>
   RNA is extracted from the sample for analysis.
 
   </p>
