--- a/src/javascript/templates/patient2/patient2view9.hbs
+++ b/src/javascript/templates/patient2/patient2view9.hbs
@@ -74,7 +74,7 @@ Do you have enough information to make a recommendation for treatment or do you 
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
                        <div class="modal-body">
-                       <h2>Select Treatment:  You do not have enough information to select treatment for your patient.  Please continue to next test.</h2>
+                       <h2>Select Treatment: You do not have enough information to select treatment for your patient. Please continue on to take the next test.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
                           <a data-navigate="patient2view10"><button  name="button">Next &#8594;</button></a>
