--- a/src/javascript/templates/patient3/patient3view10.hbs
+++ b/src/javascript/templates/patient3/patient3view10.hbs
@@ -41,12 +41,12 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-      Michele’s tissue sample has been sent for HER2 FISH testing.
+      Brittany’s tissue sample has been sent for HER2 FISH testing.
   </blockquote>
     <main id="content-main" class="row patient-3 top-gray">
 
 
-      <p>Click on the microscope to analyze Michele’s tissue sample.  Calculate the ratio of red dots to green dots.
+      <p>Click on the microscope to analyze Brittany’s tissue sample. Calculate the ratio of red dots to green dots.
 
 </p>
 <p>
