--- a/src/javascript/templates/patient2/patient2view3.hbs
+++ b/src/javascript/templates/patient2/patient2view3.hbs
@@ -53,15 +53,11 @@
 
         </div>
       </div>
-      <p>Her physician spotted abnormal tissue during a routine mammogram.
-Michele has never had breast cancer before.</p>
+      <p>Be sure to record this information in your Lab Handbook.</p>
          <figure class="m-bottom">
            <img src="images/breast_scan_6.jpg" alt="" />
-
-
-
          </figure>
-         <p>Her physician spotted abnormal tissue during a routine mammogram.</p>
+
 
          <?xml version="1.0" encoding="utf-8"?>
          <!-- Generator: Adobe Illustrator 19.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -114,7 +110,7 @@ Michele has never had breast cancer before.</p>
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
                        <div class="modal-body">
-                         <h2><span class="pink-hl">Correct!</span> Yes, it is about the size of a walnut.</h2>
+                         <h2><span class="pink-hl">Correct!</span> Yes, it is about the size of a pea.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
                          <a href="/patient2view4" data-navigate="patient2view4" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue</button></a>
