--- a/src/javascript/templates/patient2/patient2view6.hbs
+++ b/src/javascript/templates/patient2/patient2view6.hbs
@@ -56,17 +56,20 @@ The pathologist examined Michele’s tissue and has provided a pathology report.
       </div>
       <p>
         <ul class="specs">
-          <li><strong>Final Diagnosis: </strong>   Infiltrating ductal carcinoma</li>
-          <li><strong>Histological Grade:</strong> 3</li>
-          <li><strong>Stage:</strong>1</li>
-          <li><strong>Number of nodes examined:</strong>2</li>
-          <li><strong>Number of positive nodes:</strong>0</li>
+          <li><strong>Final Diagnosis:</strong><br> Infiltrating ductal carcinoma</li>
+          <li><strong>Histological Grade:</strong><br> 3</li>
+          <li><strong>Stage:</strong><br> 1</li>
+          <li><strong>Number of nodes examined:</strong><br> 2</li>
+          <li><strong>Number of positive nodes:</strong><br> 0</li>
 
         </ul>
       </p>
         <figure>
           <img src="images/Discovery_ValSkinner_PathologyReports_3.jpg" alt="" />
         </figure>
+        <p>
+          Be sure to record this information in your Lab Handbook.
+        </p>
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
