--- a/src/javascript/templates/patient3/patient3View13.hbs
+++ b/src/javascript/templates/patient3/patient3View13.hbs
@@ -71,7 +71,7 @@ Click below to make your selection for next steps. </p>
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
                        <div class="modal-body">
-                       <h2>Select Treatment:  You do not have enough information to select treatment for your patient.  Please continue to next test.</h2>
+                       <h2>Select Treatment: You do not have enough information to select treatment for your patient. Please continue on to take the next test.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
                           <a data-navigate="patient3view14"><button class="muted" name="button">Next &#8594;</button></a>
