--- a/src/javascript/templates/patient3/patient3View14.hbs
+++ b/src/javascript/templates/patient3/patient3View14.hbs
@@ -71,7 +71,7 @@ Click below to make your selection for next steps. </p>
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
                        <div class="modal-body">
-                       <h2>Select Treatment:  You do not have enough information to select treatment for your patient.  Please continue to next test.</h2>
+                       <h2>Select Treatment: That is correct. Based on Brittany’s test results, you have enough information to make a treatment recommendation.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
                           <a data-navigate="patient3view15"><button class="muted" name="button">Next &#8594;</button></a>
