--- a/src/javascript/templates/patient3/patient3view4.hbs
+++ b/src/javascript/templates/patient3/patient3view4.hbs
@@ -70,7 +70,7 @@ Click below to make your selection for next steps.
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
                        <div class="modal-body">
-                       <h2>Select Treatment:  You do not have enough information to select treatment for your patient.  Please continue to next test.</h2>
+                       <h2>Select Treatment: You do not have enough information to select treatment for your patient. Please continue on to take the next test.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
                           <a data-navigate="patient3view5"><button  name="button">Next &#8594;</button></a>
